# CameraTraps

./: .gitignore  pyproject.toml
