[project]
name = "PytorchWildlife"
version = "1.0.1.1"
license = { text = "MIT" }
authors = [
    { name = "Andres Hernandez", email = "v-andreshern@microsoft.com" },
    { name = "Zhongqi Miao", email = "zhongqimiao@microsoft.com" },
]
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "pytorch",
    "wildlife",
    "megadetector",
    "conservation",
    "animal",
    "detection",
    "classification",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.0",
    "torch>=1.10.1",
    "torchvision>=0.11.2",
    "torchaudio>=0.10.1",
    "tqdm>=4.66.1",
    "Pillow>=9.4.0",
    "supervision>=0.16.0",
    "gradio>=4.15.0",
    "ultralytics-yolov5>=0.1.1",
    "pydantic>=1.10",
]

[project.urls]
Homepage = "https://github.com/microsoft/CameraTraps/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
